--- a/eventos.html
+++ b/eventos.html
@@ -19,14 +19,14 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Alunos</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
                 </ul>
             </div>
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="fale_conosco.html">Fale Conosco</a></button>
             </div>
 
             <div class="mobile-menu-icon">
@@ -35,14 +35,14 @@
         </nav>
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Alunos</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
             </ul>
 
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="fale_conosco.html">Fale Conosco</a></button>
             </div>
         </div>
     </header> <!--FIM DO HEADER RESPONSIVO-->
