--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style_avaliacoes_index.css">
+    <link rel="stylesheet" href="assets/css/style_carrosel_index.css">
+    <script src="assets/js/script_carrossel_index.js" defer></script>
     <title>Valdenio Natação</title>
 </head>
 
@@ -51,10 +53,15 @@
 
 
     <div> <!--Divisão geral-->
-        <div><!--Divisão para primeiro carrosel-->
-
-        <h1>TESTE APENAS 11</h1>
-
+        <div class="container-slider"> <!--Divisão carrosel1-->
+            <button id="prev-button"><img src="assets/img/arrow.png" alt="prev-button"></button>
+            <div class="container-images">
+              <img src="assets/img/carrossel1.jpg" alt="Carrossel1" class="slider on">
+              <img src="assets/img/carrossel2.jpg" alt="Carrossel2" class="slider">
+              <img src="assets/img/carrossel3.jpg" alt="Carrossel3" class="slider">
+              <img src="assets/img/carrossel4.jpg" alt="Carrossel4" class="slider">
+            </div>
+            <button id="next-button"><img src="assets/img/arrow.png" alt="next-button"></button>
         </div>
 
 
