--- a/fale_conosco.html
+++ b/fale_conosco.html
@@ -54,7 +54,7 @@
     <section class="form-container">
         <div class="container">
             <form>
-                <h1>Entre em contato</h1>
+                <h1>Faça parte da nossa turma!</h1>
                 <p>Preencha o formulário abaixo e entraremos em contato com você</p>
                 <div class="input-single">
                     <input class="input" type="text" id="nome" required>
