--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Alunos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="eventos.html" class="nav-link">Eventos</a></li>
+                    <li class="nav-item"><a href="alunos.html" class="nav-link">Alunos</a></li>
+                    <li class="nav-item"><a href="sobre_nos.html" class="nav-link">Sobre</a></li>
                 </ul>
             </div>
             <div class="login-button">
@@ -40,9 +40,9 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Alunos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="eventos.html" class="nav-link">Eventos</a></li>
+                <li class="nav-item"><a href="alunos.html" class="nav-link">Alunos</a></li>
+                <li class="nav-item"><a href="sobre_nos.html" class="nav-link">Sobre</a></li>
             </ul>
 
             <div class="login-button">
