--- a/alunos.html
+++ b/alunos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style_header.css">
     <link rel="stylesheet" href="assets/css/style_footer.css">
+    <link rel="stylesheet" href="assets/css/style_alunos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Alunos</title>
 </head>
@@ -50,9 +51,118 @@
 
 
 
-    <div> <!--INICIO DO CORPO DO SITE RESPONSIVO-->
-        <h1>TESTE APENAS</h1>
-    </div> <!--FIM DO CORPO RESPONSIVO-->
+    <div class="container">
+            <div class="aluno">
+                <img src="assets/img/aluno1.jpeg" alt="Foto do aluno 1">
+                <div class="info">
+                    <h2>João Silva</h2>
+                    <p><strong>Matrícula:</strong> 12345</p>
+                    <p><strong>Data de Nascimento:</strong> 15/05/2000</p>
+                    <p><strong>Categoria:</strong> Adulto</p>
+                    <p><strong>Melhor Nado:</strong> Peito</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno2.jpeg" alt="Foto do aluno 2">
+                <div class="info">
+                    <h2>Maria Oliveira</h2>
+                    <p><strong>Matrícula:</strong> 67890</p>
+                    <p><strong>Data de Nascimento:</strong> 22/09/2001</p>
+                    <p><strong>Categoria:</strong> Infantil</p>
+                    <p><strong>Melhor Nado:</strong> Costas</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno3.jpeg" alt="Foto do aluno 3">
+                <div class="info">
+                    <h2>Carlos Pereira</h2>
+                    <p><strong>Matrícula:</strong> 11223</p>
+                    <p><strong>Data de Nascimento:</strong> 04/12/1999</p>
+                    <p><strong>Categoria:</strong> Juvenil</p>
+                    <p><strong>Melhor Nado:</strong> Crawl</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno4.jpeg" alt="Foto do aluno 4">
+                <div class="info">
+                    <h2>Ana Costa</h2>
+                    <p><strong>Matrícula:</strong> 44556</p>
+                    <p><strong>Data de Nascimento:</strong> 12/02/2003</p>
+                    <p><strong>Categoria:</strong> Infantil</p>
+                    <p><strong>Melhor Nado:</strong> Peito</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno5.jpeg" alt="Foto do aluno 5">
+                <div class="info">
+                    <h2>Luana Souza</h2>
+                    <p><strong>Matrícula:</strong> 78901</p>
+                    <p><strong>Data de Nascimento:</strong> 30/06/2002</p>
+                    <p><strong>Categoria:</strong> Juvenil</p>
+                    <p><strong>Melhor Nado:</strong> Costas</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno6.jpeg" alt="Foto do aluno 6">
+                <div class="info">
+                    <h2>Pedro Almeida</h2>
+                    <p><strong>Matrícula:</strong> 23456</p>
+                    <p><strong>Data de Nascimento:</strong> 18/08/2000</p>
+                    <p><strong>Categoria:</strong> Adulto</p>
+                    <p><strong>Melhor Nado:</strong> Crawl</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno7.jpeg" alt="Foto do aluno 7">
+                <div class="info">
+                    <h2>Fernanda Lima</h2>
+                    <p><strong>Matrícula:</strong> 34567</p>
+                    <p><strong>Data de Nascimento:</strong> 01/01/1998</p>
+                    <p><strong>Categoria:</strong> Adulto</p>
+                    <p><strong>Melhor Nado:</strong> Peito</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno8.jpeg" alt="Foto do aluno 8">
+                <div class="info">
+                    <h2>Ricardo Gomes</h2>
+                    <p><strong>Matrícula:</strong> 56789</p>
+                    <p><strong>Data de Nascimento:</strong> 05/10/1999</p>
+                    <p><strong>Categoria:</strong> Juvenil</p>
+                    <p><strong>Melhor Nado:</strong> Costas</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno9.jpeg" alt="Foto do aluno 9">
+                <div class="info">
+                    <h2>Camila Rocha</h2>
+                    <p><strong>Matrícula:</strong> 12346</p>
+                    <p><strong>Data de Nascimento:</strong> 10/11/2002</p>
+                    <p><strong>Categoria:</strong> Infantil</p>
+                    <p><strong>Melhor Nado:</strong> Crawl</p>
+                </div>
+            </div>
+
+            <div class="aluno">
+                <img src="assets/img/aluno10.jpeg" alt="Foto do aluno 10">
+                <div class="info">
+                    <h2>Gustavo Martins</h2>
+                    <p><strong>Matrícula:</strong> 78902</p>
+                    <p><strong>Data de Nascimento:</strong> 17/03/2000</p>
+                    <p><strong>Categoria:</strong> Juvenil</p>
+                    <p><strong>Melhor Nado:</strong> Peito</p>
+                </div>
+            </div>
+
+    </div>
 
 
 
