--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style_header.css">
     <link rel="stylesheet" href="assets/css/style_footer.css">
+    <link rel="stylesheet" href="assets/css/style_sobre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Sobre Nós</title>
 </head>
@@ -50,9 +51,39 @@
 
 
 
-    <div> <!--INICIO DO CORPO DO SITE RESPONSIVO-->
-        <h1>TESTE APENAS</h1>
-    </div> <!--FIM DO CORPO RESPONSIVO-->
+    <div class="container">
+        <!-- Texto sobre a escola -->
+        <section class="sobre-nos">
+            <h2>SOBRE VALDENIO NATAÇÃO</h2>
+            <p>Na Valdenio Natação, oferecemos muito mais do que aulas de natação. Proporcionamos momentos de relaxamento, saúde e diversão para todas as idades. Nossos professores experientes te guiarão em uma jornada de aprendizado e aprimoramento, ajudando você a alcançar seus objetivos.
+
+                Venha nadar com a gente e descubra os benefícios de uma vida mais ativa e saudável!
+                
+                Aulas personalizadas
+                Professores qualificados
+                Ambiente familiar
+                Diversão garantida
+                Entre em contato e agende sua aula experimental!"</p>
+        </section>
+
+        <!-- Informações de contato -->
+        <section class="contato">
+            <h2>Entre em Contato Conosco</h2>
+            <ul>
+                <li><strong>Telefone:</strong> <a href="tel:+5581999999999">+55 81 998877-6655</a></li>
+                <li><strong>E-mail:</strong> <a href="mailto:contato@escoladenatacao.com">valdenio@natacao.com</a></li>
+            </ul>
+        </section>
+
+        <!-- Mapa -->
+        <section class="mapa">
+            <h2>Onde Estamos</h2>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3948.3366106584717!2d-35.9981615249544!3d-8.269255091764817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a98bf0a566bed9%3A0xbeae9eb13bb126d2!2sClube%20dos%20Banc%C3%A1rios%20de%20Caruaru!5e0!3m2!1spt-BR!2sbr!4v1731289073685!5m2!1spt-BR!2sbr" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+    </div>
 
 
 
