--- a/fale_conosco.html
+++ b/fale_conosco.html
@@ -50,7 +50,7 @@
 
 
 
-    <div class="background-forms">
+    <div class="background-forms"> <!--INICIO DO FORMULARIO-->
     <section class="form-container">
         <div class="container">
             <form>
@@ -61,16 +61,16 @@
                     <label for="nome">Seu nome completo</label>
                 </div>
                 <div class="input-single">
-                    <input class="input" type="text" id="email" required>
+                    <input class="input" type="email" id="email" required>
                     <label for="email">Seu e-mail</label>
                 </div>
                 <div class="input-single">
-                    <input class="input" type="text" id="telefone" required>
-                    <label for="telefone">Seu telefone</label>
+                    <input class="input "type="tel" id="telefone" name="fone" required pattern="[0-9]{2} [0-9]{5}-[0-9]{4}">
+                    <label for="telefone">Seu telefone - 99 99999-9999</label>
                 </div>
                 <div class="btn"><input type="submit" value="Enviar"></div>
             </form>
-        </div><!--container-->
+        </div>
     </section>
     </div>
 
@@ -138,7 +138,7 @@
 
                 <div id="input_group">
                     <input type="email" id="email">
-                    <button>
+                    <button type="submit">
                         <i class="fa-regular fa-envelope"></i>
                     </button>
                 </div>
